Mon Jan  7 11:14:04 GMT 2008  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* manual/Makefile.am: Use soelim with -I$(srcdir).

	* man/Rules.man (mandir): Append the language so that Automake can
	  handle translated manual pages.
	  (install-data-local, uninstall-local): Removed in favor of rules
	  generated by Automake.
	  (CLEANFILES, dist-hook): Go back to using man*_MANS.
	  (all-am): Remove explicit dependencies.
	* man/Makefile.am, man/de/Makefile.am, man/es/Makefile.am,
	  man/fr/Makefile.am, man/it/Makefile.am, man/ja/Makefile.am: Go
	  back to using man*_MANS.

	* man/man8/accessdb.man8, man/fr/man8/accessdb.man8: Fix typo (-V,
	  not -v).

	* manual/Makefile.am (.pp.ps): Use groff -Tps, not -Tdvi.

	* src/Makefile.am (install-data-hook): Don't (try to) overwrite
	  existing config files.

	* src/Makefile.am (bin_SCRIPTS, all-am, install-exec-hook,
	  uninstall-hook): Remove apropos from bin_SCRIPTS, explicitly
	  depend on it from all-am, and manually create a whatis->apropos
	  symlink at install time; installing the symlink from the build
	  directory using bin_SCRIPTS would install a second copy (not
	  stripped by "make install-strip").

Mon Jan  7 09:54:12 GMT 2008  Colin Watson  <cjwatson@debian.org>

	* configure.ac: Stop checking for memory.h (not used) and limits.h
	  (guaranteed by C89).
	* lib/hashtable.c, libdb/db_ver.c, src/convert_name.c,
	  src/descriptions.c, src/filenames.c: Remove unnecessary #include
	  <stdio.h>.
	* libdb/db_delete.c, libdb/db_lookup.c, libdb/db_store.c,
	  src/manpath.c: Remove unnecessary #include <assert.h>.
	* libdb/mydbm.h, src/catman.c, src/man.c, src/manpath.c: Include
	  <limits.h> unconditionally.
	* src/convert_name.c: Remove unnecessary #include <unistd.h>.
	* src/man.c: Remove unnecessary #include <sys/file.h> and
	  <sys/wait.h>.
	* src/manpath.c: Remove unnecessary #include <termios.h>.
	* src/straycats.c: Remove unnecessary #include <fcntl.h>.