@@ -42,14 +42,16 @@ lib/getopt.h
 libdb/.deps
 libdb/Makefile
 man/Makefile
-man/*/Makefile
-man/*/man1/*.1
-man/*/man5/*.5
-man/*/man8/*.8
+man/replace.sin
+man/replace.sed
 man/man1/*.1
 man/man5/*.5
 man/man8/*.8
-man/replace.sed
+man/*/Makefile
+man/*/replace.sed
+man/*/man1/*.1
+man/*/man5/*.5
+man/*/man8/*.8
 manual/Makefile
 manual/man_db.cat
 manual/man_db.dvi
