@@ -21,17 +21,23 @@
 
 mandir = @mandir@/$(LINGUA)
 
-CLEANFILES = $(man1_MANS) $(man5_MANS) $(man8_MANS)
+CLEANFILES = $(man1_MANS) $(man5_MANS) $(man8_MANS) replace.sed
 
-.man1.1: $(top_builddir)/man/replace.sed
+replace.sed: $(top_builddir)/man/replace.sin
+	sed -e 's,%REPLACE_CONFIG_FILE%,$(config_file),g' $< > $@
+
+.man1.1: replace.sed
 	$(MKDIR_P) man1
-	sed -f $(top_builddir)/man/replace.sed $< > $@
-.man5.5: $(top_builddir)/man/replace.sed
+	@$(MAKE) $(AM_MAKEFLAGS) replace.sed
+	sed -f replace.sed $< > $@
+.man5.5: replace.sed
 	$(MKDIR_P) man5
-	sed -f $(top_builddir)/man/replace.sed $< > $@
-.man8.8: $(top_builddir)/man/replace.sed
+	@$(MAKE) $(AM_MAKEFLAGS) replace.sed
+	sed -f replace.sed $< > $@
+.man8.8: replace.sed
 	$(MKDIR_P) man8
-	sed -f $(top_builddir)/man/replace.sed $< > $@
+	@$(MAKE) $(AM_MAKEFLAGS) replace.sed
+	sed -f replace.sed $< > $@
 
 mostlyclean-local:
 	-rm -f index.*
