@@ -18,4 +18,4 @@ s,%thcatman%,@TRANS_CATMAN_UPPER@,g
 s,%thapropos%,@TRANS_APROPOS_UPPER@,g
 s,%thwhatis%,@TRANS_WHATIS_UPPER@,g
 s,%thmanconv%,@TRANS_MANCONV_UPPER@,g
-s,%manpath_config_file%,@config_file@,g
+s,%manpath_config_file%,%REPLACE_CONFIG_FILE%,g
